--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <h2>Look mama i am using github</h2>
+    <h3>this is a text</h3>
+    <h4>this is another text</h4>
+    <img src="image/daddy.png" alt="">
 </body>
 </html>
