--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <h2>Look mama i am using github</h2>
     <h3>this is a text</h3>
     <h4>this is another text</h4>
-    <img src="image/daddy.png" alt="">
+    <img src="imagegit/daddy.png" alt="image load failed">
 </body>
 </html>
