paragraph added eshal branch

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h2>Look mama i am using github</h2>
     <h3>this is a text</h3>
     <h4>this is another text</h4>
+    <p>this a paragraph in eshaal branch</p>
     <img src="image/daddy.png" alt="">
 </body>
 </html>
